<resources>
    <string name="app_name">LibraryManagement</string>
    <string name="welcome">WELCOME TO LIBRARY</string>
    <string name="branch">BRANCHES</string>
    <string name="your_branch">Select your branch</string>
    <string name="coe">COMPUTER SCIENCE</string>
    <string name="ece">ELECTRONICS</string>
    <string name="IT">INFORMATION TECH.</string>
    <string name="sft">SOFTWARE ENGINEERING</string>
</resources>
